--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -1,7 +1,7 @@
 ***技术部所有源代码和项目的管理都会放在GitHub，入门手册会列出必要执行事项***
 
 <p></p>
-- [**准备工作**]
+- [**准备工作**](#prepare)
 	- [Regist GitHub](#regist)
 	- [下载GitHub桌面工具](#download)
 	- [GitHub功能](#introGitHub)
@@ -9,11 +9,11 @@
 		- [任务及问题管理](#issue)
 		- [常用操作说明](#useGitHub)
 			- [新建库](#newRepository)
-- [**前端开发**]
+- [**前端开发**](#front)
 	- [开发工具](#frontTools)
 	- [常用快捷键](#fKeymaps)
 	- [编码规范](#fCodeConversation)
-- [**后端开发**]
+- [**后端开发**](#server)
 	- [开发工具](#serverTools)
 	- [常用快捷键](#sKeymaps)
 	- [编码规范](#sCodeConversation)
