--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -1,10 +1,10 @@
-***技术部所有源代码和项目的管理都会放在GitHub，入门手册会列出必要执行事项***
+***技术部所有源代码和项目的管理都会放在GitHub***
 
 <p></p>
-- [**准备工作**](#prepare)
-	- [Regist GitHub](#regist)
-	- [下载GitHub桌面工具](#download)
-	- [GitHub功能](#introGitHub)
+- [**准备工作**](#Prepare)
+	- [注册GitHub](#Regist GitHub)
+	- [下载GitHub桌面工具](#Download Tools)
+	- [GitHub功能](#Intro GitHub)
 		- [Wiki](#wiki)
 		- [任务及问题管理](#issue)
 		- [常用操作说明](#useGitHub)
@@ -19,7 +19,7 @@
 	- [编码规范](#sCodeConversation)
 	- [微软云](#azure)
 
-## 准备工作
+## Prepare
 
 注册GitHub账号成功后，需要将	GitHub账号告诉负责人，加入到GitHub公司组织。
 
@@ -29,19 +29,22 @@
 - 输入必填信息
 - 确认注册
 
-### 下载GitHub桌面工具	
+### Download Tools
 
 - [GitHub for Mac](http://mac.github.com/)
 - [GitHub for Windows](http://windows.github.com/)
 - [GitHub for Eclipse](http://eclipse.github.com/)
 - [GitHub mobile apps](http://mobile.github.com/)
 
-### GitHub使用介绍 
+### Intro GitHub
 
 #### Wiki
 
 详细功能介绍可参考这里：https://github.com/features/projects/wikis
+
 使用示例编辑本页即可看到
+
+> 需要注意的是要使列表锚点生效，必须使用英文，比如#Prepare对应##Prepare
 
 #### 任务及问题管理
 
