--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -1,10 +1,10 @@
 ***技术部所有源代码和项目的管理都会放在GitHub***
 
 <p></p>
-- [**准备工作**](#Prepare)
-	- [注册GitHub](#Regist GitHub)
-	- [下载GitHub桌面工具](#Download Tools)
-	- [GitHub功能](#Intro GitHub)
+- [**准备工作**](#prepare)
+	- [注册GitHub](#regist-gitHub)
+	- [下载GitHub桌面工具](#download-tools)
+	- [GitHub功能](#intro-gitHub)
 		- [Wiki](#wiki)
 		- [任务及问题管理](#issue)
 		- [常用操作说明](#useGitHub)
@@ -44,7 +44,8 @@
 
 使用示例编辑本页即可看到
 
-> 需要注意的是要使列表锚点生效，必须使用英文，比如#Prepare对应##Prepare
+> - 要使列表锚点生效，必须使用英文。比如#Prepare对应##Prepare。
+> - 使用英文时，锚点必须英文小写，多单词的空格用-连接。比如#regist-github对应###Regist GitHub
 
 #### 任务及问题管理
 
