--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -2,32 +2,22 @@
 
 <p></p>
 - [**准备工作**](#prepare)
-	- [注册GitHub](#regist-gitHub)
 	- [下载GitHub桌面工具](#download-tools)
-	- [GitHub功能](#intro-gitHub)
+	- [GitHub功能](#intro-github)
 		- [Wiki](#wiki)
-		- [任务及问题管理](#issue)
-		- [常用操作说明](#useGitHub)
-			- [新建库](#newRepository)
-- [**前端开发**](#front)
-	- [开发工具](#frontTools)
-	- [常用快捷键](#fKeymaps)
-	- [编码规范](#fCodeConversation)
-- [**后端开发**](#server)
+		- [任务及问题管理](#tasks-and-issues)
+		- [常用操作说明](#usage)			
+- [**前端开发**](#front-end)
+	- [开发工具](#front-end-tools)
+	- [常用快捷键](#front-end-keymaps)
+	- [编码规范](#flex-sdk-coding-conventions-and-best-practices)
+- [**后端开发**](#back-end)
 	- [开发工具](#serverTools)
 	- [常用快捷键](#sKeymaps)
 	- [编码规范](#sCodeConversation)
 	- [微软云](#azure)
 
 ## Prepare
-
-注册GitHub账号成功后，需要将	GitHub账号告诉负责人，加入到GitHub公司组织。
-
-### Regist GitHub
-
-- 点击右上角免费注册
-- 输入必填信息
-- 确认注册
 
 ### Download Tools
 
@@ -38,19 +28,45 @@
 
 ### Intro GitHub
 
+Git是一个分布式的版本控制系统，GitHub是基于Git的平台，使用Git的明显好处有
+- 分布式散布：每个人都可以克隆一份源代码到自己的机器上，相当于每个人都有一个自己的版本库，即使在没有网络的环境下，依然可以实现代码的提交，版本控制。
+- 集中式管理：	虽然每个人都有自己的版本库，也可以简历自己的代码分支，但产品发布都是以某一分支为标准，所有自己管理的版本库要想发布到产品都需要push到master分支，通过master分支负责人进行code review后再合并。这样能充分保证产品代码的质量和稳定性。
+
 #### Wiki
 
-详细功能介绍可参考这里：https://github.com/features/projects/wikis
+[点击查看官方介绍](https://github.com/features/projects/wikis)
 
 使用示例编辑本页即可看到
 
 > - 要使列表锚点生效，必须使用英文。比如#Prepare对应##Prepare。
 > - 使用英文时，锚点必须英文小写，多单词的空格用-连接。比如#regist-github对应###Regist GitHub
 
-#### 任务及问题管理
+#### Tasks and Issues
 
-详细功能介绍可参考这里：https://github.com/features/projects/issues
+[点击查看官方介绍](https://github.com/features/projects/issues)
 
-#### 常用操作说明
+#### Usage
 
+基本的GitHub工作流程介绍
+
+- 新建库
+	- 点击右上角新建库按钮
+	- 输入必要信息
+	- 点击创建结束
+- 克隆库到本地
+
+## Front End
+
+前端开发主要使用Flash技术
+
+### Front End Tools
+
+### Front End Keymaps
+
+### Flex SDK Codeing Conventions And Best Practices
+
+Flex是Actionscript写的，所以这套官方的编码规范也适用于Actionscript，甚至其内容大多数都是Actionscript的编码规范，在开发过程中，需要大家遵守，以后使用过程中常见的规范问题会在这里列出备注。
+[官方链接](http://sourceforge.net/adobe/flexsdk/wiki/Coding%20Conventions/)
+
+## Back End
 
