add mobileprovision, redis

--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -104,6 +104,7 @@ Ctrl+Q | 回到上一次编辑的位置
 Ctrl+E | 检索已打开的文件
 Ctrl+Shift+R | 检索已打开项目的所有文件
 Ctrl+Tab | 切换到上一次编辑文件
+Alert+方向键<br>Alert+Shift+方向键 | 按单词跳转光标<br>按单词选中
 
 
 ### Flex SDK Codeing Conventions And Best Practices
