add redis, keys

--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -105,6 +105,9 @@ Ctrl+E | 检索已打开的文件
 Ctrl+Shift+R | 检索已打开项目的所有文件
 Ctrl+Tab | 切换到上一次编辑文件
 Alert+方向键<br>Alert+Shift+方向键 | 按单词跳转光标<br>按单词选中
+Ctrl+M | 全屏工作空间
+Ctrl+Shift+O | import 信息重组织
+Ctrl+Shift+1 | 自动生成get/set
 
 
 ### Flex SDK Codeing Conventions And Best Practices
