github使用添加merge&FB快捷键更新

--- a/技术部入门手册.md
+++ b/技术部入门手册.md
@@ -104,10 +104,12 @@ Ctrl+Q | 回到上一次编辑的位置
 Ctrl+E | 检索已打开的文件
 Ctrl+Shift+R | 检索已打开项目的所有文件
 Ctrl+Tab | 切换到上一次编辑文件
-Alert+方向键<br>Alert+Shift+方向键 | 按单词跳转光标<br>按单词选中
+Alert+左右方向键<br>Alert+Shift+左右方向键 | 按单词跳转光标<br>按单词选中
+Alert+上下方向键 | 将当前行或选中的多行代码上下移动
 Ctrl+M | 全屏工作空间
 Ctrl+Shift+O | import 信息重组织
-Ctrl+Shift+1 | 自动生成get/set
+Ctrl+Shift+1 | 自动生成get/set 需要在keys里设定
+Ctrl+L | 定位到某一行
 
 
 ### Flex SDK Codeing Conventions And Best Practices
